Made TopDiyaRepeat to absolute, Fixed Rangoli image, gave DiwaliWishFontImage a good z-index

--- a/src/components/DiwaliWishFontImage.css
+++ b/src/components/DiwaliWishFontImage.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100vh; /* Full height */
   overflow: hidden; /* Hide overflow */
+  z-index: 100;
 }
 
 .sliding-image {
